--- a/gui.ui
+++ b/gui.ui
@@ -36,8 +36,8 @@ color: rgb(255, 255, 255)
   <widget class="QLineEdit" name="username">
    <property name="geometry">
     <rect>
-     <x>62</x>
-     <y>50</y>
+     <x>60</x>
+     <y>40</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -51,8 +51,8 @@ color: rgb(255, 255, 255)
   <widget class="QLineEdit" name="count">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>50</y>
+     <x>168</x>
+     <y>40</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -67,8 +67,8 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>62</x>
-     <y>30</y>
+     <x>60</x>
+     <y>20</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -80,8 +80,8 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>30</y>
+     <x>168</x>
+     <y>20</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -93,8 +93,8 @@ color: rgb(255, 255, 255)
   <widget class="QLineEdit" name="password">
    <property name="geometry">
     <rect>
-     <x>62</x>
-     <y>100</y>
+     <x>40</x>
+     <y>90</y>
      <width>113</width>
      <height>20</height>
     </rect>
@@ -108,8 +108,8 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>62</x>
-     <y>80</y>
+     <x>40</x>
+     <y>70</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -121,8 +121,8 @@ color: rgb(255, 255, 255)
   <widget class="QLineEdit" name="threads">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>210</y>
+     <x>170</x>
+     <y>90</y>
      <width>41</width>
      <height>20</height>
     </rect>
@@ -136,8 +136,8 @@ color: rgb(255, 255, 255)
   <widget class="QPushButton" name="start">
    <property name="geometry">
     <rect>
-     <x>62</x>
-     <y>240</y>
+     <x>60</x>
+     <y>250</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -177,8 +177,8 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>190</y>
+     <x>170</x>
+     <y>70</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -190,8 +190,8 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="image">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>135</y>
+     <x>18</x>
+     <y>165</y>
      <width>51</width>
      <height>51</height>
     </rect>
@@ -209,8 +209,8 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="logo">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>140</y>
+     <x>88</x>
+     <y>170</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -222,8 +222,8 @@ color: rgb(255, 255, 255)
   <widget class="QFrame" name="f_promo">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>135</y>
+     <x>78</x>
+     <y>165</y>
      <width>151</width>
      <height>51</height>
     </rect>
@@ -243,8 +243,8 @@ color: rgb(255, 255, 255)
   <widget class="QPushButton" name="site">
    <property name="geometry">
     <rect>
-     <x>82</x>
-     <y>155</y>
+     <x>80</x>
+     <y>185</y>
      <width>141</width>
      <height>23</height>
     </rect>
@@ -258,6 +258,45 @@ background-color: rgb(31, 31, 31);
    </property>
    <property name="text">
     <string>Cracked.io/insuckablyat88</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>110</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>- 8 Characters</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>125</y>
+     <width>131</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>- 1 Digit/Special Character</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>140</y>
+     <width>151</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>- Upper and Lowercase Letters</string>
    </property>
   </widget>
  </widget>
