--- a/gui.ui
+++ b/gui.ui
@@ -36,7 +36,7 @@ color: rgb(255, 255, 255)
   <widget class="QLineEdit" name="username">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>56</x>
      <y>40</y>
      <width>113</width>
      <height>20</height>
@@ -51,7 +51,7 @@ color: rgb(255, 255, 255)
   <widget class="QLineEdit" name="count">
    <property name="geometry">
     <rect>
-     <x>168</x>
+     <x>164</x>
      <y>40</y>
      <width>31</width>
      <height>20</height>
@@ -67,7 +67,7 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>60</x>
+     <x>56</x>
      <y>20</y>
      <width>61</width>
      <height>16</height>
@@ -80,7 +80,7 @@ color: rgb(255, 255, 255)
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>168</x>
+     <x>164</x>
      <y>20</y>
      <width>47</width>
      <height>13</height>
@@ -165,12 +165,29 @@ color: rgb(255, 255, 255)
   color: rgb(255, 255, 255);
   border: 2px solid white;
   border-radius: 5px;
-}</string>
+}
+QPushButton:hover {
+  border: 2px solid black;
+  color: rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
+}
+QPushButton:pressed {
+  background: rgb(31, 31, 31);
+  color: rgb(255, 255, 255);
+  border: 2px solid white;
+}
+</string>
    </property>
    <property name="text">
     <string>Start</string>
    </property>
    <property name="autoRepeat">
+    <bool>false</bool>
+   </property>
+   <property name="autoDefault">
+    <bool>true</bool>
+   </property>
+   <property name="flat">
     <bool>false</bool>
    </property>
   </widget>
@@ -300,8 +317,6 @@ background-color: rgb(31, 31, 31);
    </property>
   </widget>
  </widget>
- <resources>
-  <include location="images/resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
