--- a/gui.ui
+++ b/gui.ui
@@ -47,6 +47,9 @@ color: rgb(255, 255, 255)
   border-radius: 5px;
 }</string>
    </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhNone</set>
+   </property>
   </widget>
   <widget class="QLineEdit" name="count">
    <property name="geometry">
@@ -63,8 +66,11 @@ color: rgb(255, 255, 255)
   border-radius: 5px;
 }</string>
    </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhDigitsOnly</set>
+   </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="Username">
    <property name="geometry">
     <rect>
      <x>56</x>
@@ -77,7 +83,7 @@ color: rgb(255, 255, 255)
     <string>Username</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="Count">
    <property name="geometry">
     <rect>
      <x>164</x>
@@ -105,7 +111,7 @@ color: rgb(255, 255, 255)
 }</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="Password">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -131,6 +137,9 @@ color: rgb(255, 255, 255)
     <string notr="true">QLineEdit {
   border-radius: 5px;
 }</string>
+   </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhDigitsOnly</set>
    </property>
   </widget>
   <widget class="QPushButton" name="start">
@@ -191,7 +200,7 @@ QPushButton:pressed {
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="Threads">
    <property name="geometry">
     <rect>
      <x>170</x>
@@ -204,7 +213,7 @@ QPushButton:pressed {
     <string>Threads</string>
    </property>
   </widget>
-  <widget class="QLabel" name="image">
+  <widget class="QLabel" name="Image">
    <property name="geometry">
     <rect>
      <x>18</x>
@@ -212,6 +221,9 @@ QPushButton:pressed {
      <width>51</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="text">
     <string/>
@@ -221,19 +233,6 @@ QPushButton:pressed {
    </property>
    <property name="scaledContents">
     <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLabel" name="logo">
-   <property name="geometry">
-    <rect>
-     <x>88</x>
-     <y>170</y>
-     <width>91</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>By InSuckaBlyat88</string>
    </property>
   </widget>
   <widget class="QFrame" name="f_promo">
@@ -250,6 +249,9 @@ QPushButton:pressed {
   border: 2px solid white;
   border-radius: 5px;</string>
    </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhNone</set>
+   </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
@@ -257,27 +259,7 @@ QPushButton:pressed {
     <enum>QFrame::Raised</enum>
    </property>
   </widget>
-  <widget class="QPushButton" name="site">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>185</y>
-     <width>141</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton#site {
-color: rgb(255, 255, 255);
-border: 0;
-background-color: rgb(31, 31, 31);
-}</string>
-   </property>
-   <property name="text">
-    <string>Cracked.io/insuckablyat88</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="condit1">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -290,7 +272,7 @@ background-color: rgb(31, 31, 31);
     <string>- 8 Characters</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_6">
+  <widget class="QLabel" name="condit2">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -303,7 +285,7 @@ background-color: rgb(31, 31, 31);
     <string>- 1 Digit/Special Character</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLabel" name="condit3">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -314,6 +296,94 @@ background-color: rgb(31, 31, 31);
    </property>
    <property name="text">
     <string>- Upper and Lowercase Letters</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Version">
+   <property name="geometry">
+    <rect>
+     <x>4</x>
+     <y>304</y>
+     <width>41</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string> V5.3.0</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Github">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>304</y>
+     <width>31</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="text">
+    <string>Github</string>
+   </property>
+   <property name="wordWrap">
+    <bool>false</bool>
+   </property>
+   <property name="openExternalLinks">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Name">
+   <property name="geometry">
+    <rect>
+     <x>88</x>
+     <y>170</y>
+     <width>131</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="sizeIncrement">
+    <size>
+     <width>0</width>
+     <height>0</height>
+    </size>
+   </property>
+   <property name="baseSize">
+    <size>
+     <width>0</width>
+     <height>0</height>
+    </size>
+   </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::DefaultContextMenu</enum>
+   </property>
+   <property name="lineWidth">
+    <number>1</number>
+   </property>
+   <property name="text">
+    <string>By InSuckaBlyat88
+Cracked.io/insuckablyat88</string>
+   </property>
+   <property name="scaledContents">
+    <bool>false</bool>
+   </property>
+   <property name="wordWrap">
+    <bool>false</bool>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
+   <property name="indent">
+    <number>0</number>
    </property>
   </widget>
  </widget>
